--- a/package.json
+++ b/package.json
@@ -21,7 +21,15 @@
   "dependencies": {
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
+    "cors": "^2.8.4",
     "express": "^4.15.4",
-    "mongoose": "^5.0.11"
+    "mongoose": "^5.0.11",
+    "unirest": "^0.5.1"
+  },
+  "proxy": {
+    "/api": {
+      "target": "https://localhost:3000",
+      "secure": false
+    }
   }
 }
