--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
     "body-parser": "^1.17.2",
     "cors": "^2.8.4",
     "express": "^4.15.4",
+    "express-session": "^1.15.6",
     "mongoose": "^5.0.11",
     "mongoose-file": "0.0.2",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.0",
     "unirest": "^0.5.1"
   },
   "proxy": {
