--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "express": "^4.15.4",
+    "express-fileupload": "^0.4.0",
     "express-session": "^1.15.6",
     "mongoose": "^5.0.11",
     "mongoose-file": "0.0.2",
