--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react": "^16.0.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.0.0",
+    "react-fontawesome": "^1.6.1",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.14",
     "unirest": "^0.5.1"
