react-bootstrap-table2

--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "react": "^16.0.0",
     "react-bootstrap": "^0.32.1",
     "react-bootstrap-sidebar": "^0.0.1",
+    "react-bootstrap-table": "^4.3.1",
+    "react-bootstrap-table-next": "^0.1.8",
     "react-dom": "^16.0.0",
     "react-fontawesome": "^1.6.1",
     "react-icons-kit": "^1.0.7",
