--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.0.0",
     "react-fontawesome": "^1.6.1",
     "react-icons-kit": "^1.0.7",
+    "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.14",
     "react-sidenav": "^2.1.2",
