--- a/client/package.json
+++ b/client/package.json
@@ -5,12 +5,14 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "axios": "^0.16.2",
+    "p5": "^0.6.0",
     "papaparse": "^4.3.7",
     "react": "^16.0.0",
     "react-bootstrap": "^0.32.1",
     "react-bootstrap-sidebar": "^0.0.1",
     "react-bootstrap-table": "^4.3.1",
     "react-bootstrap-table-next": "^0.1.8",
+    "react-bootstrap-table2-editor": "^0.1.5",
     "react-dom": "^16.0.0",
     "react-fontawesome": "^1.6.1",
     "react-icons-kit": "^1.0.7",
