--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "axios": "^0.16.2",
+    "node-uuid": "^1.4.8",
     "p5": "^0.6.0",
     "papaparse": "^4.3.7",
     "react": "^16.0.0",
