--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^3.5.0",
+    "eslint": "^4.19.1",
     "nodemon": "^1.11.0"
   },
   "dependencies": {
